<resources>
    <string name="app_name">dental</string>
    <string-array name="tooth_state">
        <item>Кариес</item>
        <item>Пломба</item>
        <item>Коронка</item>
        <item>Зуб удален</item>
        <item>Нерв удален</item>
        <item>Имплант</item>
        <item>Отбеливание</item>
        <item>Виниры</item>
        <item>Брекеты</item>
    </string-array>
    <string name="AlertDialogEvent">ДОБАВИТЬ СОБЫТИЕ</string>
    <string name="placehint">МЕСТО</string>
    <string name="doctorhint">ВРАЧ</string>
    <string name="commenthint">КОММЕНТАРИЙ</string>
    <string name="datehint">ДАТА</string>
    <string name="stats">Cтатистика</string>
    <string name="teeth">Зубы</string>
    <string name="whiten">Отбеливание</string>
    <string name="exit">Выйти</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="email">EMAIL</string>
    <string name="password">ПАРОЛЬ</string>
</resources>