<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item
                android:id="@+id/navigation_stats"
                android:enabled="true"
                android:icon="@drawable/ic_outline_data_usage_24"
                android:title="@string/stats"/>
            <item
                android:id="@+id/navigation_teeth"
                android:enabled="true"
                android:icon="@drawable/ic_baseline_person_outline_24"
                android:title="@string/teeth"/>
            <item
                android:id="@+id/navigation_camera"
                android:enabled="true"
                android:icon="@drawable/ic_outline_camera_alt_24"
                android:title="@string/whiten"/>
            <item
                android:id="@+id/navigation_exit"
                android:enabled="true"
                android:icon="@drawable/ic_outline_exit_to_app_24"
                android:title="@string/exit"/>
</menu>